[package]
name = "signer-internal-crypto"
version = "0.1.0"
authors = ["kory33"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[features]
default = ["console_error_panic_hook", "wee_alloc"]

[dependencies]
wasm-bindgen = "0.2.63"

ssh-key = { version = "0.5.1", features = ["alloc", "ed25519"] }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
wee_alloc = { version = "0.4.5", optional = true }

js-sys = "0.3.61"

# We need Crypto feature for key generation.
web-sys = { version = "0.3.61", features = ["Window", "Crypto"] }

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
