[package]
name = "signer-internal-crypto"
version = "0.1.0"
authors = ["kory33"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.84"

ssh-key = { version = "0.5.1", features = ["alloc", "ed25519"] }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`.
console_error_panic_hook = { version = "0.1.7" }

js-sys = "0.3.61"

# We need Crypto feature for key generation (the actual Crypto object needs to be given as a function argument).
web-sys = { version = "0.3.61", features = ["Crypto"] }

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
